fix: add spacing to blog post titles

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -14,6 +14,7 @@
   }
   &-title {
     display: flex;
+    margin-bottom: 3rem;
     &-icon {
       padding-right: 10px;
       img {
